--- a/新闻发布系统/NewsReleaseSystem/BackDesk/head.html
+++ b/新闻发布系统/NewsReleaseSystem/BackDesk/head.html
@@ -7,9 +7,9 @@
         .style1 {
             background-color: #66ccff;
             height: 50px;
-            width: 1004px;
+            width: 1000px;
             line-height: 50px;
-            margin-left: 17.3%;
+            margin: 0 auto;
             margin-top: 5px;
         }
         .titleSystemName {
